syntax = "proto3";

option go_package = "./user";

service User {
  rpc CreateUser (CreateUserReq)returns (CreateUserReply){}
}


enum Code {
  NOKnow = 0;
  Success = 200;
  CreateErr = 30001;
}

message CreateUserReq {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_again = 4;
}

message CreateUserReply {
  Code code = 1;
  string msg = 2;
  message user {
    int64  user_id = 1;
  }
  user data = 3;
}


